[gd_scene load_steps=19 format=2]

[ext_resource path="res://EndingCutscene1.gd" type="Script" id=1]
[ext_resource path="res://assets/cutscenes/ET_final_puzzle_2.png" type="Texture" id=2]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/cutscenes/reactor_bg.png" type="Texture" id=4]
[ext_resource path="res://assets/cutscenes/ET_final_puzzle_1.png" type="Texture" id=5]
[ext_resource path="res://assets/cutscenes/props/heavy_forward.png" type="Texture" id=6]
[ext_resource path="res://assets/cutscenes/helix_blue.png" type="Texture" id=7]
[ext_resource path="res://assets/cutscenes/helix_red.png" type="Texture" id=8]
[ext_resource path="res://assets/cutscenes/props/light_forward.png" type="Texture" id=9]
[ext_resource path="res://assets/cutscenes/props/heavy_back.png" type="Texture" id=10]
[ext_resource path="res://assets/cutscenes/props/light_back.png" type="Texture" id=11]
[ext_resource path="res://assets/cutscenes/props/light_exert.png" type="Texture" id=12]
[ext_resource path="res://assets/cutscenes/props/heavy_exert.png" type="Texture" id=13]
[ext_resource path="res://assets/cutscenes/light_fixit.png" type="Texture" id=14]
[ext_resource path="res://assets/cutscenes/heavy_thumbsup.png" type="Texture" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Animate"
length = 9.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Panel3/HeavyActor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.2, 2.8, 3.2, 4.4, 5, 5.1, 5.6, 5.7, 5.8, 5.9, 6.1, 6.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.435275, 1.62451, 0.366022 ),
"update": 0,
"values": [ Vector2( 70, 522 ), Vector2( 110, 502 ), Vector2( 110, 502 ), Vector2( 303, 502 ), Vector2( 303, 502 ), Vector2( 303, 502 ), Vector2( 78, 502 ), Vector2( 128, 502 ), Vector2( 128, 502 ), Vector2( 124, 502 ), Vector2( 132, 502 ), Vector2( 132, 502 ), Vector2( 128, 450 ), Vector2( 128, 502 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel3/HeavyActor:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel3/LightActor:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 2.6, 3.2, 4.4, 5, 5.1, 5.9, 6, 6.1, 6.2, 6.5, 6.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.5, 0.517633, 0.297302 ),
"update": 0,
"values": [ Vector2( 986, 566 ), Vector2( 902, 506 ), Vector2( 902, 506 ), Vector2( 747, 506 ), Vector2( 747, 506 ), Vector2( 747, 506 ), Vector2( 972, 506 ), Vector2( 942, 506 ), Vector2( 942, 506 ), Vector2( 946, 506 ), Vector2( 938, 506 ), Vector2( 942, 506 ), Vector2( 942, 486 ), Vector2( 942, 506 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel3/LightActor:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 2, 2 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 2.1, 2.2, 2.3, 2.5, 2.8, 4.4, 4.5, 5, 5.9, 6.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ "heavystep" ],
"method": "play_sound"
}, {
"args": [ "heavystep" ],
"method": "play_sound"
}, {
"args": [ "heavystep" ],
"method": "play_sound"
}, {
"args": [ "push" ],
"method": "play_sound"
}, {
"args": [ "heavystep" ],
"method": "play_sound"
}, {
"args": [ "push" ],
"method": "play_sound"
}, {
"args": [ "heavystep" ],
"method": "play_sound"
}, {
"args": [ "heavystep" ],
"method": "play_sound"
}, {
"args": [ "push" ],
"method": "play_sound"
}, {
"args": [ "voidundo" ],
"method": "play_sound"
}, {
"args": [ "involuntarybump" ],
"method": "play_sound"
}, {
"args": [ "heavycoyote" ],
"method": "play_sound"
}, {
"args": [ "heavyland" ],
"method": "play_sound"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3, 0.7, 1, 2, 2.3, 2.6, 3.2, 4.4, 4.6, 4.8, 5, 6.2, 6.8, 7.5, 8.34 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ "lightstep" ],
"method": "play_sound"
}, {
"args": [ "lightstep" ],
"method": "play_sound"
}, {
"args": [ "lightstep" ],
"method": "play_sound"
}, {
"args": [ "lightstep" ],
"method": "play_sound"
}, {
"args": [ "lightstep" ],
"method": "play_sound"
}, {
"args": [ "lightstep" ],
"method": "play_sound"
}, {
"args": [ "usegreenality" ],
"method": "play_sound"
}, {
"args": [ "fall" ],
"method": "play_sound"
}, {
"args": [ "fall" ],
"method": "play_sound"
}, {
"args": [ "fall" ],
"method": "play_sound"
}, {
"args": [ "involuntarybumplight" ],
"method": "play_sound"
}, {
"args": [ "lightcoyote" ],
"method": "play_sound"
}, {
"args": [ "lightland" ],
"method": "play_sound"
}, {
"args": [ "fixit3" ],
"method": "play_sound"
}, {
"args": [ "fixit4" ],
"method": "play_sound"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Panel3/HeavyActor:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5, 4.4, 5.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 6 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Panel3/LightActor:texture")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.3, 4.4, 6.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 9 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Panel3/HeavyActor:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Panel3/LightActor:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Panel3/ChronoHelixRed:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 2.2, 2.8, 3.2, 4.1, 4.2, 4.3, 4.4, 4.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 258, 422 ), Vector2( 258, 422 ), Vector2( 431, 422 ), Vector2( 431, 422 ), Vector2( 492, 422 ), Vector2( 488, 422 ), Vector2( 496, 422 ), Vector2( 492, 422 ), Vector2( 410, 422 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Panel3/ChronoHelixBlue:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 2, 2.6, 3.2, 4.1, 4.2, 4.3, 4.4, 4.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 760, 418 ), Vector2( 760, 418 ), Vector2( 593, 418 ), Vector2( 593, 418 ), Vector2( 556, 418 ), Vector2( 560, 418 ), Vector2( 552, 418 ), Vector2( 556, 418 ), Vector2( 652, 418 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Panel3/HeavyActor:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Panel3/LightActor:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Panel3/HeavyFixIt:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 8.34, 8.49 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0, 0 ), Vector2( 2, 2 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Panel3/LightFixIt:scale")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 7.5, 7.67 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1e-05, 1e-05 ), Vector2( 2, 2 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Panel3/LightActor:rotation_degrees")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 4.4, 5, 6.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 90.0, 180.0, 0.0 ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Panel3/HeavyActor:rotation_degrees")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 4.4, 5, 5.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, -90.0, 180.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Onload"
length = 4.0

[sub_resource type="Animation" id=3]
length = 0.001

[node name="EndingCutscene1" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.176471, 0.054902, 0.027451, 1 )

[node name="CutsceneHolder" type="Node2D" parent="."]

[node name="Panel1" type="Sprite" parent="CutsceneHolder"]
visible = false
texture = ExtResource( 5 )
centered = false

[node name="Panel2" type="Sprite" parent="CutsceneHolder"]
visible = false
texture = ExtResource( 2 )
centered = false

[node name="Panel3" type="Node2D" parent="CutsceneHolder"]
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="CutsceneHolder/Panel3"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="ChronoHelixRed" type="Sprite" parent="CutsceneHolder/Panel3"]
position = Vector2( 410, 422 )
texture = ExtResource( 8 )

[node name="ChronoHelixBlue" type="Sprite" parent="CutsceneHolder/Panel3"]
position = Vector2( 652, 418 )
texture = ExtResource( 7 )

[node name="HeavyActor" type="Sprite" parent="CutsceneHolder/Panel3"]
position = Vector2( 128, 466.865 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="LightActor" type="Sprite" parent="CutsceneHolder/Panel3"]
position = Vector2( 942, 506 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="HeavyFixIt" type="Sprite" parent="CutsceneHolder/Panel3"]
position = Vector2( 130, 402 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 15 )

[node name="LightFixIt" type="Sprite" parent="CutsceneHolder/Panel3"]
position = Vector2( 936, 442 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 14 )

[node name="AdvanceLabel" type="Label" parent="CutsceneHolder"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 1.0
margin_top = 287.0
margin_right = 512.0
margin_bottom = 301.0
theme = ExtResource( 3 )
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CutsceneHolder"]
autoplay = "Onload"
anims/Animate = SubResource( 1 )
anims/Onload = SubResource( 2 )
anims/RESET = SubResource( 3 )
